Módulo 3: Solucionando Errores en Plantillas

--- a/MinimalXY/templates/article.html
+++ b/MinimalXY/templates/article.html
@@ -47,7 +47,7 @@
           <div class="adjust-width">
             <div id="author-block" class="w3-light-grey w3-border">
               <div id="author-info">
-                <a href="{{ AUTHOR_WEB }}"><img style="width: 60px; height: 60px;" src="{{ AUTHOR_AVATAR }}" onerror="this.src='theme/images/avatar.png'" alt="Avatar"></a>
+                <a href="{{ AUTHOR_WEB }}"><img style="width: 60px; height: 60px;" src="{{ AUTHOR_AVATAR }}" onerror="this.src='{{ SITEURL }}/theme/images/avatar.png'" alt="Avatar"></a>
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href="{{ AUTHOR_WEB }}"><span id="author-name" class="w3-hover-text-dark-grey">{{ article.author }}</span></a>
                   <p id="author-story">{% if article.author==AUTHOR %}{{ AUTHOR_DESCRIPTION }}{% endif %}</p>
