--- a/MinimalXY/templates/author.html
+++ b/MinimalXY/templates/author.html
@@ -9,7 +9,7 @@
     <div class="w3-container col-main w3-center">
       <h2>Articles by {{ author }}</h2>
       <br>
-      <a href="{{ SITEURL }}/{{ author.url }}" style="display: flex; align-items: center; justify-content: center;"><img style="width: 50px; height: 50px;" src="{{ AUTHOR_AVATAR }}" onerror="this.src='../theme/images/avatar.png'"></img></a>
+      <a href="{{ SITEURL }}/{{ author.url }}" style="display: flex; align-items: center; justify-content: center;"><img style="width: 50px; height: 50px;" src="{{ AUTHOR_AVATAR }}" onerror="this.src='{{ SITEURL }}/theme/images/avatar.png'"></img></a>
     </div>
 
     {% endblock content_title %}
