--- a/MinimalXY/templates/introduction.html
+++ b/MinimalXY/templates/introduction.html
@@ -9,7 +9,7 @@
           </ul>
         </div>
         <div style="line-height: 180px;">
-          <a href="{{ AUTHOR_WEB }}" target="_blank"><img class="avatar" alt="Avatar" src="{{ AUTHOR_AVATAR }}" onerror="this.src='theme/images/avatar.png'"></a>
+          <a href="{{ AUTHOR_WEB }}" target="_blank"><img class="avatar" alt="Avatar" src="{{ AUTHOR_AVATAR }}" onerror="this.src='{{ SITEURL }}/theme/images/avatar.png'"></a>
         </div>
       </aside>
     </div>
