--- a/MinimalXY/templates/index.html
+++ b/MinimalXY/templates/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <footer>
-          <a class="w3-btn w3-green w3-right" href="{{ SITEURL }}/{{ article.url }}">Read &#10093;</a>
+          <a class="w3-btn w3-green w3-right" data-l10n-id="Read" href="{{ SITEURL }}/{{ article.url }}">Read</a>
         </footer>
       </article>
 
